force-app/main/default/objects/BM_Item__c/BM_Item__c.object-meta.xml
<CustomObject>
    <label>BM Service Line</label>
    <nameField>
        <displayFormat>Item-{000000}</displayFormat>
        <label>BM Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BM Service Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>