force-app/main/default/objects/BM_Item__c/fields/T_Quantity__c.field-meta.xml
<CustomField>
    <fullName>T_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>