force-app/main/default/objects/BM_Item__c/fields/TW1_Gross_Value__c.field-meta.xml
<CustomField>
    <fullName>TW1_Gross_Value__c</fullName>
    <label>Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>