force-app/main/default/objects/BM_Item__c/fields/TW1_Service_Line__c.field-meta.xml
<CustomField>
    <fullName>TW1_Service_Line__c</fullName>
    <label>Service Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>