force-app/main/default/objects/BM_Item__c/fields/TW1_Total__c.field-meta.xml
<CustomField>
    <fullName>TW1_Total__c</fullName>
    <formula>TW1_Gross_Value__c *  T_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>