force-app/main/default/objects/BM_Item__c/validationRules/CantChangeBMAfterSendBM.validationRule-meta.xml
<ValidationRule>
    <fullName>CantChangeBMAfterSendBM</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR(
ISCHANGED(T_Quantity__c ) , ISCHANGED(TW1_Service_Line__c ), ISCHANGED(TW1_Gross_Value__c)
),
NOT(ISBLANK(Request__r.TW1_BM_Reference_Number_in_SAP_MODEC__c))
)</errorConditionFormula>
    <errorMessage>You cannot change a BM Item after send BM.</errorMessage>
</ValidationRule>