force-app/main/default/objects/BM_Item__c/validationRules/CantCreateBMItemWithoutBMStatusNaoEnviad.validationRule-meta.xml
<ValidationRule>
    <fullName>CantCreateBMItemWithoutBMStatusNaoEnviad</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(), NOT(ISPICKVAL( Request__r.BM_Status__c , &apos;Não enviado&apos;)))</errorConditionFormula>
    <errorMessage>You can&apos;t create a new BM Item if the BM status is not &quot;Não enviado&quot;.</errorMessage>
</ValidationRule>