force-app/main/default/objects/BM_Item__c/validationRules/NumericOnlyServiceLine.validationRule-meta.xml
<ValidationRule>
    <fullName>NumericOnlyServiceLine</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER( TW1_Service_Line__c ))</errorConditionFormula>
    <errorDisplayField>TW1_Service_Line__c</errorDisplayField>
    <errorMessage>Please fill the field only with numeric characters.</errorMessage>
</ValidationRule>